--- a/test/fixtures/tour_types.yml
+++ b/test/fixtures/tour_types.yml
@@ -1,4 +1,4 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
+# Read about_as fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
   type_of_tour_id: 
