--- a/test/fixtures/country_tours.yml
+++ b/test/fixtures/country_tours.yml
@@ -1,4 +1,4 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
+# Read about_as fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
   country_id: 
