--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,8 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
-/public/*
+/public/system
+/public/ckeditor_assets
 .idea
 .DS_Store
 doc/
